--- a/sam2/configs/sam2.1_hiera_tiny_finetune512.yaml
+++ b/sam2/configs/sam2.1_hiera_tiny_finetune512.yaml
@@ -218,10 +218,12 @@ trainer:
               video_dataset:
                 _target_: training.dataset.vos_raw_dataset.NiftiRawDataset
                 img_folder: /root/autodl-fs/medsam2/meddata/ImagesTr  # 绝对路径
-                gt_folder: /root/autodl-fs/medsam2/meddata/labelsTr   # 绝对路径
+                gt_folder: /root/autodl-fs/medsam2/meddata/LabelsTr   # 绝对路径
                 normalize: true
                 lower_bound: -1000    # Adjust based on your data range (e.g., CT HU values)
                 upper_bound: 1000     # Adjust based on your data range
+                multi_class_mode: true  # 启用多类别模式
+                target_class_id: null   # 初始为null，会在训练时动态设置
               sampler:
                 _target_: training.dataset.vos_sampler.RandomUniformSampler
                 num_frames: ${scratch.num_frames}
