--- a/sam2/configs/sam2.1_hiera_tiny_finetune512.yaml
+++ b/sam2/configs/sam2.1_hiera_tiny_finetune512.yaml
@@ -179,20 +179,20 @@ trainer:
     # compile_image_encoder: False
 
     ####### Training specific params #######
-    # box/point input and corrections
-    prob_to_use_pt_input_for_train: 0.5
-    prob_to_use_pt_input_for_eval: 0.0
-    prob_to_use_box_input_for_train: 1.0 
-    prob_to_use_box_input_for_eval: 0.0
-    prob_to_sample_from_gt_for_train: 0.1  # with a small prob, sampling correction points from GT mask instead of prediction errors
-    num_frames_to_correct_for_train: 2  # iteratively sample on random 1~2 frames (always include the first frame)
-    num_frames_to_correct_for_eval: 1  # only iteratively sample on first frame
-    rand_frames_to_correct_for_train: True  # random #init-cond-frame ~ 2
-    add_all_frames_to_correct_as_cond: True  # when a frame receives a correction click, it becomes a conditioning frame (even if it's not initially a conditioning frame)
-    # maximum 2 initial conditioning frames
-    num_init_cond_frames_for_train: 2
-    rand_init_cond_frames_for_train: True  # random 1~2
-    num_correction_pt_per_frame: 7
+    # mask-only input (no box/point prompts)
+    prob_to_use_pt_input_for_train: 0.0  # disable point input for training
+    prob_to_use_pt_input_for_eval: 0.0   # disable point input for evaluation
+    prob_to_use_box_input_for_train: 0.0 # disable box input for training
+    prob_to_use_box_input_for_eval: 0.0  # disable box input for evaluation
+    prob_to_sample_from_gt_for_train: 0.0  # not needed for mask-only mode
+    num_frames_to_correct_for_train: 1  # only use first frame for mask input
+    num_frames_to_correct_for_eval: 1   # only use first frame for mask input
+    rand_frames_to_correct_for_train: False  # not needed for mask-only mode
+    add_all_frames_to_correct_as_cond: False  # not needed for mask-only mode
+    # use only first frame as initial conditioning frame
+    num_init_cond_frames_for_train: 1
+    rand_init_cond_frames_for_train: False  # always use first frame
+    num_correction_pt_per_frame: 0  # no correction points needed
     use_act_ckpt_iterative_pt_sampling: false
     
 
